# scrapling-fetch-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
skills/s-fetch/: SKILL.md
skills/s-fetch-setup/: SKILL.md
skills/s-fetch/references/: install.md
src/scrapling_fetch_mcp/: _fetcher.py  mcp.py
