[project]
name = "scrapling-fetch-mcp"
version = "0.2.3"
description = "Helps AI assistants access text content from bot-protected websites. MCP server that fetches HTML/markdown from sites with anti-automation measures using Scrapling."
readme = "README.md"
authors = [
    { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "markdownify>=1.2.0",
    "mcp>=1.28.0",
    "scrapling[fetchers]>=0.4.7",
    # Indirect dependencies (security constraints)
    "cryptography>=48.0.1",
    "idna>=3.15",
    "PyJWT>=2.13.0",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
]

[project.urls]
"Homepage" = "https://github.com/cyberchitta/scrapling-fetch-mcp"
"Bug Tracker" = "https://github.com/cyberchitta/scrapling-fetch-mcp/issues"

[project.scripts]
scrapling-fetch-mcp = "scrapling_fetch_mcp.mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
